# jsonhub-sdk-python

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
jsonhub/infrastructure/: http_client.py
jsonhub/sdk/: client.py  client_factory.py  config.py  data_type.py  entity.py  http_client.py
jsonhub/sdk/criteria/: base_fields.py  criteria.py
jsonhub/sdk/request/: http_method.py  request.py  request_factory.py
jsonhub/sdk/response/: raw_response.py  response.py  response_mapper.py
jsonhub/sdk/response/mappers/: abc_mapper.py  entities.py  entity.py
tests/: test_client.py
