[tool.poetry]
name = "jsonhub-sdk"
version = "0.1.1"
description = ""
authors = ["Łukasz Bacik <mail@luka.sh>"]
readme = "README.md"
packages = [
    { include = "jsonhub"}
]


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


